# fastapi-ai-backend

./: .gitignore  LICENSE  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0e9f47ae628b_update_user_and_message_models.py  add_updated_at_to_dietitians.py
app/: main.py  services
app/api/: router.py
app/api/endpoints/: appointments.py  auth.py  dietitians.py  file_access.py  messages.py  nutrition.py  nutrition_ai.py  posts.py  recipes.py  users.py
app/core/: config.py  exceptions.py  security.py
app/data/: dataset.csv
app/db/: base.py
app/models/: __init__.py  ai_model_output.py  appointment.py  dietitian.py  message.py  model_training.py  nutrition.py  nutrition_model.py  post.py  progress_tracking.py  user.py
app/schemas/: pagination.py  post.py  recipe.py  token.py
app/services/: appointment_service.py  dietitian_service.py  message_service.py  nutrition_service.py  post_service.py  recipe_service.py  user_service.py
app/utils/: backblaze_upload.py  get_signed_url.py
models/: dietitian.py  food_tracking.py  message.py  nutrition_model.py  post.py  user.py
script/: diet_list_make.py
services/: post_service.py  user_service.py
tests/test_api/: backblaze_test.py  test.py
tests/test_services/: backblaze_service_test.py  upload_backblaze_service.py
